--- a/index.html
+++ b/index.html
@@ -33,5 +33,7 @@
 <p class="p1"><span class="s1">&lt;p&gt;I'm hosted with GitHub Pages.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
+  <button onclick="location.href='index.html'>Go home</button>
+
 </body>
 </html>
