--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <p class="p1"><span class="s1">&lt;p&gt;I'm hosted with GitHub Pages.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
-  <button onclick="location.href='index.html'>Go home</button>
-
+<a href="https://viveksharma-oodles.github.io/index.html">
+  <button>Take me to the same page</button>
+</a>
 </body>
 </html>
