--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 <p class="p1"><span class="s1">&lt;p&gt;I'm hosted with GitHub Pages.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
-<a href="https://viveksharma-oodles.github.io/index.html">
+
+  <a href="https://stackoverflow.com">
   <button>Take me to the same page</button>
 </a>
+  
 </body>
 </html>
