--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p class="p1"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
 
-  <a href="https://stackoverflow.com">
+  <a href="https://viveksharma-oodles.github.io/index.html">
   <button>Take me to the same page</button>
 </a>
   
