--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <p class="p1"><span class="s1">&lt;/html&gt;</span></p>
 
   <a href="https://viveksharma-oodles.github.io/index.html">
-  <button>Take me to the same page</button>
+  <button id="myid">Take me to the same page</button>
 </a>
   
 </body>
