--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <script>
 window._pcq = window._pcq || [];
-window._pcq.push(['tag', 'person_name', 'vivek'+Math.floor((Math.random() * 12) + 1)]);
+window._pcq.push(['tag', 'person_name', "vivek"+ Math.floor((Math.random() * 12) + 1)]);
 </script>
   
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
