--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@ window._pcq = window._pcq || [];
 window._pcq.push(['tag', 'person_name', vivek);
 </script>
   
+  <script>
+window._pcq = window._pcq || [];
+window._pcq.push(['tag', 'person_name', sharma]);
+</script>
+  
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title></title>
