--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <script>
 window._pcq = window._pcq || [];
-window._pcq.push(['tag', 'person_name', vivek);
+window._pcq.push(['tag', 'person_name', <vivek>);
 </script>
   
   <script>
