--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   
   <script>
 window._pcq = window._pcq || [];
-window._pcq.push(['tag', 'person_name',vivek);
+window._pcq.push(['tag', 'person_name','vivek');
 </script>
   
   <script>
 window._pcq = window._pcq || [];
-window._pcq.push(['tag', 'person_name', sharma]);
+window._pcq.push(['tag', 'person_name', 'sharma']);
 </script>
   
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
