--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         s=u.createElement('script');
         s.type='text/javascript';
         s.async=true;
-        s.src='https://cdn.pushcrewstaging.com/js/f53719946b2655c8da19f21e0979474f.js';
+        s.src='https://cdn.pushcrew.com/js/b41425169232eee45394dd1327d82800.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
     })(window,document);
