--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         s=u.createElement('script');
         s.type='text/javascript';
         s.async=true;
-        s.src='https://cdn.pushcrewstaging.com/js/1cc42db57f49359fae1940a7fd694c85.js';
+        s.src='https://cdn.pushcrew.com/js/46cbf38be26601bd29f62494477c8d75.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
     })(window,document);
