--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         s=u.createElement('script');
         s.type='text/javascript';
         s.async=true;
-        s.src='pushcrewstaging.com/js/16821114cf14e9a825f5aa30f5b6994b.js';
+        s.src='https://pushcrewstaging.com/js/16821114cf14e9a825f5aa30f5b6994b.js';
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
     })(window,document);
