--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
-        <h1>Your Construction Company</h1>
+        <h1>Aadhaar Construction Company</h1>
       </a>
       <nav class="navigation">
         <ul>
@@ -36,7 +36,7 @@
       <h2>Our Services</h2>
       <div class="services-grid">
         <div class="service">
-          <img src="images/service1.jpg" alt="Service 1 Image">
+          <img src="https://wallsanddreams.com/images/home-construction-design-noida.jpg" alt="Service 1 Image">
           <h3>Residential Construction</h3>
           <p>From new home builds to renovations and additions, we handle all aspects of residential construction.</p>
         </div>
