--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+p {
+  background-image: url('https://media.istockphoto.com/id/164548761/vector/suburban-view.jpg?s=612x612&w=0&k=20&c=7ECFMViiFZNtskfLhRrbjoJLO1HcosHIZadu3DKT-_M=');
+}
+</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aadhaar Construction - Building Dreams Since 1990</title>
@@ -9,7 +14,7 @@
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
-        <h1>Aadhaar Construction Company</h1>
+        <h1  style="color: black">Aadhaar Construction Company</h1>
       </a>
       <nav class="navigation">
         <ul>
@@ -17,7 +22,7 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">About Us</a></li>
-          <li><a href="#">Contact: 9811154307 </a></li>
+          <li style="font-size: 20px"><a href="#">Contact: 9811154307 </a></li>
         </ul>
       </nav>
     </div>
