Update background image

--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <style>
-p {
-  background-image: url('https://media.istockphoto.com/id/164548761/vector/suburban-view.jpg?s=612x612&w=0&k=20&c=7ECFMViiFZNtskfLhRrbjoJLO1HcosHIZadu3DKT-_M=');
-}
-</style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aadhaar Construction - Building Dreams Since 1990</title>
   <link rel="stylesheet" href="style.css"> </head>
-<body>
+<body background="https://media.istockphoto.com/id/164548761/vector/suburban-view.jpg?s=612x612&w=0&k=20&c=7ECFMViiFZNtskfLhRrbjoJLO1HcosHIZadu3DKT-_M=">
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
