--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aadhaar Construction - Building Dreams Since 1990</title>
   <link rel="stylesheet" href="style.css"> </head>
-<body background="https://media.istockphoto.com/id/164548761/vector/suburban-view.jpg?s=612x612&w=0&k=20&c=7ECFMViiFZNtskfLhRrbjoJLO1HcosHIZadu3DKT-_M=">
+<body background="https://i.pinimg.com/originals/21/24/b4/2124b4beaaff049dff9369cb5697eb46.png">
   <header class="header">
     <div class="container">
       <a href="index.html" class="logo">
